--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -1,9 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
+body {
   font-family: "Rubik", sans-serif;
   color: #444;
 }
